[gd_scene load_steps=2 format=2]

[ext_resource path="res://Explosions/ExplosionGroup.gd" type="Script" id=1]

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )
timer_1_time = 0.5
timer_2_time = 0.5

[node name="Timer2" type="Timer" parent="."]
wait_time = 0.001
one_shot = true

[node name="Timer" type="Timer" parent="."]
wait_time = 0.001
one_shot = true

[node name="LifeTime" type="Timer" parent="."]
wait_time = 4.0
one_shot = true
autostart = true
[connection signal="timeout" from="Timer2" to="." method="_on_Timer2_timeout"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="LifeTime" to="." method="_on_LifeTime_timeout"]
